# cb-cli

./: .gitignore  .goreleaser.yml  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  install.sh  main.go
.github/workflows/: auto-release.yml  release.yml
cmd/: brand.go  confirm.go  format.go  init_cmd.go  list.go  picker.go  restore.go  root.go  run.go  status.go  version.go  wire.go
internal/api/: client.go  client_test.go  errors.go
internal/archive/: archive.go  archive_test.go
internal/backup/: backup.go  backup_test.go  restore.go
internal/config/: config.go  config_test.go
internal/crypto/: encrypt.go  encrypt_test.go
internal/dumper/: dumper.go  dumper_test.go  factory.go  mysql.go  postgres.go  sqlite.go
internal/prune/: prune.go  prune_test.go
internal/updater/: updater.go
internal/upload/: upload.go  upload_test.go
src/: main.rs
src/cli/: init.rs  list.rs  mod.rs  output.rs  restore.rs  run.rs  status.rs  version.rs
src/core/: api.rs  archive.rs  backup.rs  config.rs  crypto.rs  mod.rs  prune.rs  restore.rs  types.rs  updater.rs  upload.rs
src/core/dumper/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/tui/: app.rs  confirm.rs  dashboard.rs  mod.rs  picker.rs  progress.rs  theme.rs
