[package]
name = "calmbackup"
version = "2.0.0"
edition = "2024"
description = "Zero-knowledge encrypted database backups"
license = "MIT"

[[bin]]
name = "calmbackup"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Archive
tar = "0.4"
flate2 = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
